--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAGE_SITE_TOKEN }}
           publish_dir: ./public
