--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,5 +28,10 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_branch: gh-pages
+          publish_dir: ./docs
+          allow_empty_commit: true
