--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -79,6 +79,8 @@ menu: #you can customize, i18n files are in the theme's languages folder. fa-reg
   Home: 
     path: / 
     icon: fa-regular fa-house # can be empty
+  Categorie:
+    path: /categories
   Archives: 
     path: /archives 
     icon: fa-regular fa-archive # can be empty
