--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -79,7 +79,7 @@ menu: #you can customize, i18n files are in the theme's languages folder. fa-reg
   Home: 
     path: / 
     icon: fa-regular fa-house # can be empty
-  Categorie:
+  目录~press:
     path: /categories
   每天都是爱你的形状❥(^_-): 
     path: /love 
