--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -81,9 +81,12 @@ menu: #you can customize, i18n files are in the theme's languages folder. fa-reg
     icon: fa-regular fa-house # can be empty
   目录~press:
     path: /categories
+  标签~tags:
+    path: /tags
   每天都是爱你的形状❥(^_-): 
     path: /love 
     icon: fa-regular fa-archive # can be empty
+
   # Status: 
   #   path: https://status.evanluo.top/
   #   icon: fa-regular fa-chart-bar
