--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,15 @@
 # deploy:
 #   type: ''
 
+# 设置默认生成路径
+permalink: :title/
+plugins:
+  mermaid: # Mermaid JS
+    enable: true # enable mermaid or not
+    version: "9.3.0" # default v9.3.0
+# 资源压缩
+all_minifier: true
+# 部署相关
 deploy:
   type: git
   repo: https://gitee.com/zmkWorkspace/zmk-blog.git
@@ -115,7 +124,7 @@ encrypt: # hexo-blog-encrypt
   abstract: 有东西被加密了, 请输入密码查看.
   message: 您好, 这里需要密码.
   tags:
-  - {name: "简历", password: "911204"}
+  - {name: 简历, password: 911204}
   - {name: 千方, password: 10011069}
   - {name: 千方, password: 10011069}
   - {name: 小程序自研, password: 123456}
@@ -125,3 +134,5 @@ encrypt: # hexo-blog-encrypt
   wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
   wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
   enable: true
+# 动态文件夹
+post_asset_folder: true
